--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Eagle Vision IT</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="utility.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </head>
   <body>
     <header class="flex align-center">
@@ -441,5 +442,80 @@
       </div>
      </div>
 
+     <div class="section" style="
+    background-color: #e8f8ff54;">
+      <div class="container gap-3 align-center flex flex-col">
+        <div class="align-center  flex flex-col gap-1">
+          
+          <h2 class="title" style="font-size: 46px; color: var(--primary-color);">Need a successful project?</h2>
+        </div>
+        <div>
+            <button class="primary-btn flex align-center gap-1">
+              Estimate Projects  <svg
+                class="btn-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 256 512"
+              >
+                <path
+                  d="M246.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-9.2-9.2-22.9-11.9-34.9-6.9s-19.8 16.6-19.8 29.6l0 256c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l128-128z"
+                />
+              </svg>
+            </button>
+          </div>
+           <div class="flex cta-footer gap-3">
+                <h4 class="light-black" style="font-weight: 400;">or call us on</h4>
+                <div class="flex gap-1">
+                    <img style="width:16px;object-fit: contain;" src="./images/phone.png" alt="">
+                    <h4 style="color:var(--secondary-color);font-weight: 400;" >+977-9812345678</h4>
+                </div>
+            </div>
+      </div>
+     </div>
+   <!-- footer  -->
+
+   <div class="footer-section">
+    <div class="container flex gap-3">
+      <div class="footer-block" style="width: 40%;">
+        <h3 style="font-size: 46px;font-weight: 600; color: var(--primary-color);">Get In Touch!</h3>
+        <p class="light-black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sint, cumque a corporis numquam aperiam consequatur nostrum temporibus harum odio.</p>
+        <form action="post" class="flex gap-2">
+          <input type="email" placeholder="E-mail">
+          <input class="primary-btn" type="button" value="Subscribe">
+        </form>
+      </div>
+      <div class="divider"></div>
+      <div class="footer-block" style="width: 20%;">
+        <h3 class="footer-title">Useful Links</h3>
+        <div class="footer-content">
+          <p>Rise blocks – Gutenberg Page builder Plugin</p>
+          <p>All Readymade Themes</p>
+          <p>Get Starter Templates</p>
+          <p>Travel & eCommerce Templates</p>
+        </div>
+      </div>
+
+      <div class="footer-block" style="width: 20%;">
+        <h3 class="footer-title">Popular WP Themes</h3>
+        <div class="footer-content">
+          <p>Rise blocks – Gutenberg Page builder Plugin</p>
+          <p>All Readymade Themes</p>
+          <p>Get Starter Templates</p>
+          <p>Travel & eCommerce Templates</p>
+        </div>
+      </div>
+
+      <div class="footer-block" style="width: 20%;">
+        <h3 class="footer-title">Main Pages</h3>
+        <div class="footer-content">
+          <p>Rise blocks – Gutenberg Page builder Plugin</p>
+          <p>All Readymade Themes</p>
+          <p>Get Starter Templates</p>
+          <p>Travel & eCommerce Templates</p>
+        </div>
+      </div>
+
+    </div>
+   </div>
   </body>
+  <script src="script.js"></script>
 </html>
