--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Eagle Vision IT</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="utility.css" />
@@ -11,7 +12,9 @@
   <body>
     <header class="flex align-center">
       <div class="container flex align-center justify-between">
-        <img id="logo" src="" alt="Eagle Vision IT" />
+        <h3 id="logo" >
+          Eagle Vision IT
+          </h3>
 
         <nav class="flex justify-between align-center gap-5">
           <ul class="flex">
@@ -48,7 +51,7 @@
       </div>
     </header>
     <div class="hero-section flex align-center">
-      <div class="container flex align-center gap-5">
+      <div class="container hero-section-container flex align-center gap-5">
         <div class="hero-leftside flex flex-col gap-3">
           <h1>Flexible and modern website for your company!</h1>
           <p class="light-black">
@@ -179,7 +182,7 @@
     </div>
 
     <div class="section bg">
-      <div class="container flex align-center gap-5">
+      <div class="container cta-container flex align-center gap-5">
         <img src="./images/cta-image.jpg" alt="" />
         <div class="cta-rightside flex flex-col gap-3">
           <h3 class="cta-title">
@@ -216,7 +219,7 @@
     <!-- form   -->
 
     <div class="section">
-      <div class="container flex gap-100">
+      <div class="container form-container flex gap-100">
         <div class="form-leftside width-50 flex flex-col gap-1">
           <h3 class="sub-title">Contact Us</h3>
           <h2 class="title">The profession web agency for growth company</h2>
@@ -335,7 +338,7 @@
      <!-- team   -->
 
      <div class="section bg">
-      <div class="container flex align-center gap-5">
+      <div class="container cta-container flex align-center gap-5">
         <img src="./images/cta-image.jpg" alt="" />
         <div class="cta-rightside flex flex-col gap-3">
           <h3 class="cta-title">
@@ -393,7 +396,7 @@
 
     <!-- partners -->
      <div class="section">
-      <div class="container flex gap-100">
+      <div class="container partners-container flex gap-100">
          <div class="partners-leftside flex flex-col gap-1">
           <h3 class="sub-title">Top Clients</h3>
           <h2 class="title">We've built solutions for...</h2>
@@ -474,8 +477,8 @@
    <!-- footer  -->
 
    <div class="footer-section">
-    <div class="container flex gap-3">
-      <div class="footer-block" style="width: 40%;">
+    <div class="container footer-container flex gap-3">
+      <div class="footer-block footer-block-1" >
         <h3 style="font-size: 46px;font-weight: 600; color: var(--primary-color);">Get In Touch!</h3>
         <p class="light-black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sint, cumque a corporis numquam aperiam consequatur nostrum temporibus harum odio.</p>
         <form action="post" class="flex gap-2">
@@ -484,7 +487,7 @@
         </form>
       </div>
       <div class="divider"></div>
-      <div class="footer-block" style="width: 20%;">
+      <div class="footer-block footer-block-2">
         <h3 class="footer-title">Useful Links</h3>
         <div class="footer-content">
           <p>Rise blocks – Gutenberg Page builder Plugin</p>
@@ -494,7 +497,7 @@
         </div>
       </div>
 
-      <div class="footer-block" style="width: 20%;">
+      <div class="footer-block footer-block-2">
         <h3 class="footer-title">Popular WP Themes</h3>
         <div class="footer-content">
           <p>Rise blocks – Gutenberg Page builder Plugin</p>
@@ -504,7 +507,7 @@
         </div>
       </div>
 
-      <div class="footer-block" style="width: 20%;">
+      <div class="footer-block footer-block-2">
         <h3 class="footer-title">Main Pages</h3>
         <div class="footer-content">
           <p>Rise blocks – Gutenberg Page builder Plugin</p>
